tests/ivg/invalid/unrecognized_gradient_type.ivg
format IVG-3
// unrecognized gradient type
fill gradient:[bogus 0,0 1,0]
